# boilerplate

./: .gitignore  .mcp.json  CLAUDE.md  README.md  justfile
.claude/: settings.json
api/: .gitignore  CLAUDE.md  justfile  pyproject.toml
api/scripts/: example.py
api/src/app/: config.py  main.py
api/src/app/models/: health.py
api/src/app/repositories/: health.py
api/src/app/routers/: health.py
api/src/app/use_cases/: health.py
client/: CLAUDE.md  justfile  package-lock.json  package.json
client/src/app/: layout.tsx
client/src/hooks/: use-health.ts
client/src/lib/: axios.ts
client/src/store/: example.store.ts
client/src/types/: index.ts
